--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@grammyjs/runner": "^2.0.3",
 		"dotenv": "^16.4.5",
 		"grammy": "^1.28.0",
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"prettier": "^3.3.3"
 	}
 }
